--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-Merlot
+theme: jekyll-theme-Tactile
 title: Octocat's homepage
 description: Bookmark this to keep an eye on my project updates!
