--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 theme: jekyll-theme-Tactile
-title: Octocat's homepage
-description: Bookmark this to keep an eye on my project updates!
+title: Variational AutoEncoders for anomaly detection in VBS events within an EFT framework
+description: Dunno what description
+
+
