--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-#theme: jekyll-theme-Tactile
-#title: Variational AutoEncoders for anomaly detection in VBS events within an EFT framework
-#description: Dunno what description
+theme: jekyll-theme-Minima
+title: Variational AutoEncoders for anomaly detection in VBS events within an EFT framework
+description: Dunno what description
 
 
