--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-Minima
+theme: jekyll-theme-minima
 title: Variational AutoEncoders for anomaly detection in VBS events within an EFT framework
 description: Dunno what description
 
