--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minima
-title: Variational AutoEncoders for anomaly detection in VBS events within an EFT framework
+title: Variational AutoEncoders
 description: Dunno what description
 
 
