--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-Minimal
-title: Variational AutoEncoders
-description: Dunno what description
+title: VAEs for anomaly detection in VBS with EFTs
+description: Using Variational AutoEncoders (VAEs) to detect anomalies in Vector Boson Scattering (VBS) events within an Effective Field Theory (EFT) framework, in which BSM physics is modeled by adding higher dimensional terms to the SM lagrangian
 
 github:
   is_project_page: false
