--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-Minimal
-title: Variational AutoEncoders for anomaly detection in VBS with EFTs
-description: Using Variational AutoEncoders (VAEs) to detect anomalies in Vector Boson Scattering (VBS) events, in an agnostic manner with respect to the Beyond Standard Model (BSM) theory assumed. The new physics is modeled within an Effective Field Theory (EFT) framework, in which BSM contributions are obtained adding higher dimensional terms to the SM lagrangian.
+title: Giulia Lavizzari
+description: PhD student at University of Milan Bicocca, doctoral student at CERN, in the CMS experiment.
 
 github:
   is_project_page: false
